foundation/argo/vault/resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: vault
  name: vault-ui
spec:
  parentRefs:
    - namespace: cilium-system
      name: web-gateway
      sectionName: https-bacchus-io
  hostnames:
    - vault.bacchus.io
  rules:
    - backendRefs:
        - name: vault-ui
          port: 8200

# snapshot vault volumes every day
